@@ -17,6 +17,7 @@ libsyx_0_1_la_SOURCES	= 	\
 	syx-memory.c		\
 	syx-primitives.c	\
 	syx-interp.c		\
+	syx-gc.c		\
 	syx-plugins.c
 
 libsyx_0_1_la_LIBADD	= $(BASE_DEPENDENCIES_LIBS) $(LIBJIT_LIBS)
@@ -34,6 +35,7 @@ syxinclude_HEADERS	= 	\
 	syx-scheduler.h		\
 	syx-memory.h		\
 	syx-interp.h		\
+	syx-gc.h		\
 	syx-plugins.h
 
 bin_PROGRAMS		= syx
