@@ -11,6 +11,7 @@
 #include "syx-utils.h"
 #include "syx-interp.h"
 #include "syx-scheduler.h"
+#include "syx-gc.h"
 #include "syx-plugins.h"
 
 #endif
